Move JVM class unloading settings to different location
+review REVIEW-5835